--- a/src/main/resources/static/pagina2.html
+++ b/src/main/resources/static/pagina2.html
@@ -3,20 +3,30 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
+
 <html>
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-
     </head>
     <body>
-        <h1 style="text-align: center; background-color: aquamarine; color: white">Pagina 2</h1>
-        <h2> Uso de parrafo </h2> 
-        <p> Etiquetas de apariencia
-        <p>  Lorem <strong> ipsum dolor </strong> sit amet consectetur adipiscing elit penatibus per, fames nullam duis suscipit inceptos vitae id dignissim dictumst diam, nostra lacus venenatis nulla urna varius ac vehicula. Blandit pellentesque aliquet semper purus facilisis hendrerit est sem, quisque tellus pharetra facilisi ut massa dapibus, bibendum magnis vel per porttitor litora tincidunt. Fusce habitasse imperdiet donec ullamcorper iaculis mauris interdum netus elementum dictumst primis nisl eleifend duis leo, sagittis purus parturient sodales ut lobortis eu penatibus neque integer dui vestibulum feugiat ridiculus. Id maecenas suscipit lobortis in aptent imperdiet conubia neque, ultricies penatibus aliquet elementum nisl quis mauris.
 
-        <p>  Orci nunc <u> quisque dictum </u> sodales scelerisque conubia quam, fusce erat libero consequat penatibus inceptos suspendisse, non donec nisi a etiam curae. Elementum vestibulum tellus faucibus nullam pellentesque, scelerisque ut dui lobortis, nunc augue duis ridiculus. Mollis eu mauris feugiat faucibus mi dictum iaculis egestas laoreet mus dapibus senectus erat gravida, leo nisl molestie cursus pretium curae viverra pharetra convallis praesent purus odio. At non hac accumsan vitae vestibulum praesent fusce varius sollicitudin, vehicula porta suscipit nullam felis consequat volutpat proin, nostra in dapibus vivamus a eros netus arcu.
+        <a href="pagina7.html">Back</a>
+        <a href="index.html">Home</a>
+        <a href="pagina3.html">Next</a>
+        <hr>
+        <h1  style="text-align: center;background-color: blue;color: white">Pagina 2</h1>
+        <h2>Uso de etiquetas de apariencia</h2>
 
-        <p>   Lacinia enim <i> nam justo dignissim orci </i> quis molestie dictumst sagittis curabitur a parturient integer, potenti tempor inceptos velit lacus senectus auctor mi curae scelerisque duis hendrerit. Rutrum mus sociis habitasse elementum interdum, leo aliquet varius platea tincidunt phasellus, pulvinar faucibus nisi euismod. Condimentum pharetra scelerisque penatibus pulvinar enim magna ornare, habitant nibh dignissim turpis netus sagittis porttitor imperdiet, quam gravida pretium lacus integer nullam. Per sapien quisque augue aptent nibh non ultricies, penatibus rutrum habitasse egestas duis cum netus sodales, et pulvinar phasellus aliquam posuere mollis. </p> 
+        <p>Esta es su tienda en linea con los mejores productos</p>
+
+        <p>Lorem <strong> ipsum dolor </strong> sit amet consectetur adipiscing elit, parturient enim morbi dignissim aliquet class, sociosqu fusce pulvinar blandit hac dis. Per faucibus leo vel malesuada iaculis nibh luctus mollis a curabitur, habitasse vivamus proin sollicitudin suspendisse tempor cras conubia turpis arcu ultrices, maecenas duis senectus facilisi at donec tristique suscipit class. Nisl risus aenean porttitor platea sagittis taciti, massa egestas porta proin.</p>
+
+        <p>Faucibus <u> erat blandit </u> ante lacus tellus sollicitudin nullam dignissim at auctor, a mus in est urna hendrerit vulputate lacinia quisque ultrices taciti, dui vehicula vel fringilla egestas lobortis congue ultricies nulla. Imperdiet sodales mus turpis hendrerit diam rhoncus erat, dictumst penatibus class aenean porttitor eleifend quis, dictum varius vestibulum volutpat eu vel. Convallis condimentum tincidunt odio commodo pellentesque nunc proin dui, libero nibh nam ridiculus potenti fermentum integer, litora iaculis senectus ad lacinia fames erat.
+        </p>
+
+        <p>Faucibus <i> erat blandit </i> ante lacus tellus sollicitudin nullam dignissim at auctor, a mus in est urna hendrerit vulputate lacinia quisque ultrices taciti, dui vehicula vel fringilla egestas lobortis congue ultricies nulla. Imperdiet sodales mus turpis hendrerit diam rhoncus erat, dictumst penatibus class aenean porttitor eleifend quis, dictum varius vestibulum volutpat eu vel. Convallis condimentum tincidunt odio commodo pellentesque nunc proin dui, libero nibh nam ridiculus potenti fermentum integer, litora iaculis senectus ad lacinia fames erat.
+        </p>
+
     </body>
 </html>
